Add style to make the iframe fill the page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
   <head>
     <title>Red Fusion MC</title>
+    <style type="text/css">
+      body, html
+      {
+        margin: 0; padding: 0; height: 100%; overflow: hidden;
+      }
+      #content
+      {
+        position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+      }
+    </style>
   </head>
   <body>
     <iframe frameborder="0" height="100%" src="http://play.redfusionmc.com:8123/" width="100%"></iframe>
